<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    tools:context="com.remi.altina.Lesptitsmonstres.Participate">

    <ImageView
        android:id="@+id/par_headerimg"
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:scaleType="centerCrop"

        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/participate" />

   <!-- <TextView
        android:id="@+id/tv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/iv_photo"
        android:layout_marginTop="7dp"
        android:clickable="true"
        android:layout_marginLeft="80dp"
        android:onClick="postarticle"
        android:text="@string/postarticle"
        android:textColor="@color/black"
        android:textSize="@dimen/sizeparticipate" />-->

    <EditText
        android:id="@+id/postarticle_postarticleedt"
        android:layout_marginLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:textSize="18sp"
        android:layout_below="@+id/par_headerimg"
        android:layout_centerHorizontal="true"
        android:background="@drawable/edittextborder"
        android:hint="@string/posthere" />

    <TextView
        android:id="@+id/sometext"
        android:layout_width="match_parent"
        android:layout_below="@+id/postarticle_postarticleedt"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/participatetext"
        android:gravity="center"
        android:textSize="16sp">

    </TextView>

    <Button
        android:id="@+id/postarticle_postarticlebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:textSize="@dimen/buttontext"
        android:text="@string/post" />

   <!-- <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/par_headerimg"
        android:layout_marginTop="17dp"
        android:clickable="true"
        android:onClick="postarticle"
        android:src="@drawable/participatearticle" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"

        android:layout_below="@+id/tv_photo"
        android:clickable="true"
        android:onClick="postarticle"
        android:text="@string/participatepostphotdesc" />-->
<!--
    <TextView
        android:id="@+id/tv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/iv_photo"
        android:layout_marginEnd="49dp"
        android:layout_marginTop="13dp"
        android:text="@string/postarticle"
        android:textSize="@dimen/sizeparticipate" />

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="47dp"
        android:layout_toStartOf="@+id/tv_photo"
        android:src="@drawable/participatearticle" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_photo"
        android:layout_toEndOf="@+id/iv_photo"
        android:text="@string/participatepostphotdesc" />-->




</RelativeLayout>

     <com.google.android.material.navigation.NavigationView
        android:id="@+id/nv"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu">

    </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>
